# debug

./: CMakeLists.txt  README.md
example/: .gitignore  CMakeLists.txt  main.c  usage.sh
include/-0/: debug_shortcut.h
src/: abort.c  die.c
